--- a/AppConfiguration-Test/AppConfiguration-Test.csproj
+++ b/AppConfiguration-Test/AppConfiguration-Test.csproj
@@ -10,6 +10,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Azure.Identity" Version="1.17.1" />
       <PackageReference Include="Microsoft.Extensions.Configuration.AzureAppConfiguration" Version="8.4.0" />
       <PackageReference Include="Microsoft.FeatureManagement.AspNetCore" Version="4.3.0" />
     </ItemGroup>
