--- a/AppConfiguration-Test/AppConfiguration-Test.csproj
+++ b/AppConfiguration-Test/AppConfiguration-Test.csproj
@@ -11,6 +11,7 @@
 
     <ItemGroup>
       <PackageReference Include="Azure.Identity" Version="1.17.1" />
+      <PackageReference Include="Microsoft.Azure.AppConfiguration.AspNetCore" Version="8.4.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.AzureAppConfiguration" Version="8.4.0" />
       <PackageReference Include="Microsoft.FeatureManagement.AspNetCore" Version="4.3.0" />
     </ItemGroup>
